fixed alignment

--- a/src/InfoGoal/KickerBundle/Resources/public/scss/general.scss
+++ b/src/InfoGoal/KickerBundle/Resources/public/scss/general.scss
@@ -73,6 +73,10 @@ body {
     margin-top: 15px;
 }
 
+.table-rez-btn#index {
+  margin-left: 0;
+}
+
 .block {
     background-color: rgba(97, 196, 131, 1);
     color: white;
